--- a/src/app/user-auth/login/login.component.html
+++ b/src/app/user-auth/login/login.component.html
@@ -1,4 +1,4 @@
-<p>login works!</p>
+<h1> {{ item }}</h1>
 <button (click)="getName(123,'Mahmud')"> Signup </button>
 <br> <br>
 <button (click)="getDate('Markhor')"> Let's warn</button>
