--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<app-pipes></app-pipes>
 <app-login [item]= "data"></app-login>
 <button (click)="upChild()"> Lets Update Child Component </button>
 <br><br> 
